--- a/arch/arm64/configs/rzboard_defconfig
+++ b/arch/arm64/configs/rzboard_defconfig
@@ -287,6 +287,7 @@ CONFIG_SND_SOC_RZG2L_SSI=y
 CONFIG_SND_SOC_WM8978=y
 CONFIG_SND_SOC_AK4613=y
 CONFIG_SND_SOC_PCM5102A=y
+CONFIG_SND_SOC_DA7213=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_SND_SIMPLE_SCU_CARD=y
