--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -560,7 +560,8 @@ config SND_SOC_DA7210
         tristate
 
 config SND_SOC_DA7213
-        tristate
+        tristate "Dialog DA7212/DA7213 CODEC"
+        depends on I2C
 
 config SND_SOC_DA7218
 	tristate
