--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -18,7 +18,8 @@
 
 	aliases {
 		i2c0 = &i2c0;
-		serial0 = &scif0;
+		serial0 = &scif0; /* console */
+		serial1 = &scif1; /* BLE module */
 	};
 
 	chosen {
@@ -271,6 +272,11 @@
 		function = "scif0";
 	};
 
+	scif1_pins: scif1 {
+		groups = "scif1_data", "scif1_ctrl";
+		function = "scif1";
+	};
+
 	ssi0_pins: ssi0 {
 		groups = "ssi0_ctrl_d", "ssi0_data_d";
 		function = "ssi0";
@@ -368,6 +374,13 @@
 &scif0 {
 	pinctrl-0 = <&scif0_pins>;
 	pinctrl-names = "default";
+	status = "okay";
+};
+
+&scif1 {
+	pinctrl-0 = <&scif1_pins>;
+	pinctrl-names = "default";
+	uart-has-rtscts;
 	status = "okay";
 };
 
