DTBO:RzBoard: Add CAN devicetree overlays support
	Add CAN on 40Pin Header dtbo support

Signed-off-by: wenxue.guo <wenxue.guo@avnet.com>

--- a/arch/arm64/boot/dts/renesas/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/overlays/Makefile
@@ -6,3 +6,4 @@ DTC_FLAGS += -@
 dtb-y += rzboard-ext-uart2.dtbo
 dtb-y += rzboard-ext-i2c.dtbo
 dtb-y += rzboard-ext-spi.dtbo
+dtb-y += rzboard-ext-can.dtbo
