--- a/arch/arm64/configs/rzboard_defconfig
+++ b/arch/arm64/configs/rzboard_defconfig
@@ -237,14 +237,15 @@ CONFIG_DRM_RCAR_DU=y
 CONFIG_DRM_RCAR_DW_HDMI=y
 CONFIG_DRM_RZG2L_MIPI_DSI=y
 CONFIG_DRM_PANEL_LVDS=y
+CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_DUMB_VGA_DAC=y
 CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_I2C_ADV7511_AUDIO=y
-CONFIG_DRM_ITE_IT6161=y
 CONFIG_DRM_DW_HDMI_AHB_AUDIO=y
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
 CONFIG_DRM_DW_HDMI_CEC=y
+CONFIG_DRM_ITE_IT6161=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_LOGO=y
