--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -621,6 +621,21 @@
 			};
 		};
 	};
+/*
+	panel@0 {
+        compatible = "sharp,ls060t1sx01";
+		reg = <0>;
+		dsi-lanes = <2>;
+        reset-gpios = <&pinctrl RZG2L_GPIO(43, 0) GPIO_ACTIVE_HIGH>;
+		status = "okay";
+
+        port {
+			 panel_in: endpoint {
+				remote-endpoint = <&dsi0_out>;
+			};
+        };
+    };
+*/
 };
 
 &du {
