--- a/arch/arm64/configs/rzboard_defconfig
+++ b/arch/arm64/configs/rzboard_defconfig
@@ -241,10 +241,10 @@ CONFIG_DRM_DUMB_VGA_DAC=y
 CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_I2C_ADV7511_AUDIO=y
-CONFIG_DRM_ITE_IT6161=y
 CONFIG_DRM_DW_HDMI_AHB_AUDIO=y
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
 CONFIG_DRM_DW_HDMI_CEC=y
+CONFIG_DRM_ITE_IT6161=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_LOGO=y
@@ -259,6 +259,7 @@ CONFIG_SND_SOC_RCAR=y
 CONFIG_SND_SOC_RZG2L=y
 CONFIG_SND_SOC_RZG2L_SSI=y
 CONFIG_SND_SOC_AK4613=y
+CONFIG_SND_SOC_LITE_CODEC=y
 CONFIG_SND_SOC_DA7213=y
 CONFIG_SND_SOC_PCM5102A=y
 CONFIG_SND_SOC_WM8978=y
