DTS&DEFCONFIG: Add Cortex-M33 support
	1. Add reserved memory for Cortex-M33 core from meta-rzv2l-freertos;
	2. Add RPmsg options support in kernel default configure;

Signed-off-by: wenxue.guo <wenxue.guo@avnet.com>

--- a/arch/arm64/configs/rzboard_defconfig
+++ b/arch/arm64/configs/rzboard_defconfig
@@ -325,6 +325,9 @@ CONFIG_R9A07G044L_DMA=y
 CONFIG_R9A07G054L_DMA=y
 CONFIG_RCAR_DMAC=y
 CONFIG_RENESAS_USB_DMAC=y
+CONFIG_UIO=y
+CONFIG_UIO_PDRV_GENIRQ=y
+CONFIG_UIO_DMEM_GENIRQ=y
 CONFIG_VFIO=y
 CONFIG_VFIO_PCI=y
 CONFIG_VIRTIO_PCI=y
@@ -342,6 +345,9 @@ CONFIG_HWSPINLOCK=y
 # CONFIG_ARM64_ERRATUM_858921 is not set
 CONFIG_MAILBOX=y
 CONFIG_IPMMU_VMSA=y
+CONFIG_REMOTEPROC=y
+CONFIG_RPMSG_CHAR=y
+CONFIG_RPMSG_VIRTIO=y
 CONFIG_RCAR_THERMAL_EMS_ENABLED=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
@@ -364,6 +370,7 @@ CONFIG_PHY_RCAR_GEN3_USB3=y
 CONFIG_PHY_RZG2L_USBTEST=y
 CONFIG_TEE=y
 CONFIG_OPTEE=y
+CONFIG_U_DMA_BUF=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_FANOTIFY=y
@@ -393,4 +400,3 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_FTRACE is not set
 CONFIG_MEMTEST=y
-CONFIG_U_DMA_BUF=y
