DRPAI:CODE&DTS:RzBoard: Add DRP-AI Support
     apply 0003-enable-drpai-drv.patch from meta-rzv/recipes-kernel/linux/linux-renesas
     add the node drpai0

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -733,3 +733,9 @@
 &adc {
 	status = "okay";
 };
+
+&drpai0 {
+	memory-region = <&drp_reserved>;
+	linux-memory-region = < &{/memory@48000000} >;
+	status = "okay";
+};
