--- a/arch/arm64/boot/dts/renesas/r9a07g054l.dtsi
+++ b/arch/arm64/boot/dts/renesas/r9a07g054l.dtsi
@@ -906,6 +906,25 @@
 				};
 			};
 		};
+
+		drpai0: drpai@12C00000 {
+			compatible = "renesas,rzv2l-drpai";
+			reg = <0 0x13000000 0 0x1000000>,
+				  <0 0x12C00000 0 0x400000>;
+			clocks = <&cpg CPG_MOD R9A07G054L_CLK_DRP_INTCLK>,
+					 <&cpg CPG_MOD R9A07G054L_CLK_DRP_ACLK_DRP>,
+					 <&cpg CPG_MOD R9A07G054L_CLK_DRP_MCLK>,
+					 <&cpg CPG_MOD R9A07G054L_CLK_DRP_DCLKIN>,
+					 <&cpg CPG_MOD R9A07G054L_CLK_DRP_ACLK>;
+			resets = <&cpg R9A07G054L_CLK_DRP_INTCLK>;
+			power-domains = <&cpg>;
+			clock-names = "intclk","aclk_drp","mclk","dclkin","aclk";
+			interrupts = <GIC_SPI 440 IRQ_TYPE_LEVEL_HIGH>,
+						 <GIC_SPI 441 IRQ_TYPE_LEVEL_HIGH>,
+						 <GIC_SPI 442 IRQ_TYPE_LEVEL_HIGH>,
+						 <GIC_SPI 443 IRQ_TYPE_LEVEL_HIGH>;
+            status = "okay";
+		};
 	};
 
 	thermal-zones {
