EXFAT:CODE&DEFCONFIG: Add exFAT file system support
	Add exFAT file system support

Signed-off-by: wenxue.guo <wenxue.guo@avnet.com>

--- a/arch/arm64/configs/rzboard_defconfig
+++ b/arch/arm64/configs/rzboard_defconfig
@@ -377,6 +377,7 @@ CONFIG_FANOTIFY=y
 CONFIG_QUOTA=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_HUGETLBFS=y
